--- a/Random_Forest_Model.ipynb
+++ b/Random_Forest_Model.ipynb
@@ -201,7 +201,7 @@
     "import seaborn as sns \n",
     "import numpy as np\n",
     "\n",
-    "# Import and read the healthcare-dataset-stroke-data.csv.\n",
+    "# Import and read the cleaned cvd dataset\n",
     "import pandas as pd \n",
     "cvd_df = pd.read_csv(\"C:/Users/Aline/OneDrive/Desktop/Boot Camp/Project 4/heart_cleaned.csv\")\n",
     "cvd_df.head()"
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -498,7 +498,7 @@
     }
    ],
    "source": [
-    "# Look at the stroke outcome value counts\n",
+    "# Look at the outcome value counts for Heart Disease\n",
     "h_counts = cvd_df['Heart_Disease'].value_counts()\n",
     "h_counts"
    ]
@@ -530,7 +530,7 @@
     }
    ],
    "source": [
-    "# Examine the distribution of stroke column\n",
+    "# Examine the distribution of Heart Disease column\n",
     "plt.bar(x = h_counts.index, height = h_counts, tick_label = ['0', '1'])\n",
     "plt.title('Heart Disease Outcome Distribution')"
    ]
