--- a/Random_Forest_Model.ipynb
+++ b/Random_Forest_Model.ipynb
@@ -541,7 +541,7 @@
     "id": "Oh4iuAwvTtOC"
    },
    "source": [
-    "**Findings:** The `0`s and `1`s in stroke column is highly imbalanced"
+    "**Findings:** The `0`s and `1`s in Heart Disease column is highly imbalanced"
    ]
   },
   {
@@ -846,6 +846,13 @@
     "# Look at the classification report\n",
     "print(\"Classification Report\")\n",
     "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Evaluation**: RandomOverSampler resulted in a high overall accuracy rate of 98.25% when predicting both class `0` and `1` using this model."
    ]
   }
  ],
