--- a/Random_Forest_Model_Optimization1.ipynb
+++ b/Random_Forest_Model_Optimization1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -187,7 +187,7 @@
        "4                      0.0          4  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,59 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "XM3VsqShDZYZ",
-    "outputId": "4a179cbf-336c-4edd-ba28-8fd549c31833"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age_Group\n",
-       "0    26.005244\n",
-       "1    28.585826\n",
-       "2    29.697715\n",
-       "3    29.151087\n",
-       "4    27.672867\n",
-       "Name: BMI, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a series of average BMI for each age\n",
-    "avg_bmi_by_age = cvd_df.groupby('Age_Group')['BMI'].mean()\n",
-    "avg_bmi_by_age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "YbUXJ5SwRI_f"
-   },
-   "outputs": [],
-   "source": [
-    "# Replace NaN values in the \"bmi\" column with the average BMI of the corresponding age\n",
-    "def replace_bmi(row):\n",
-    "    if pd.isna(row['BMI']):\n",
-    "        return avg_bmi_by_age[row['Age_Group']]\n",
-    "    else:\n",
-    "        return row['BMI']\n",
-    "\n",
-    "cvd_df['BMI'] = cvd_df.apply(replace_bmi, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -408,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -440,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -492,20 +440,20 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Look at the stroke outcome value counts\n",
+    "# Look at the Heart Disease outcome value counts\n",
     "cvd_counts = cvd_df['Heart_Disease'].value_counts()\n",
     "cvd_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +462,7 @@
        "Text(0.5, 1.0, 'Heart Disease Outcome Distribution')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,14 +478,14 @@
     }
    ],
    "source": [
-    "# Examine the distribution of stroke column\n",
+    "# Examine the distribution of Heart Disease column\n",
     "plt.bar(x = cvd_counts.index, height = cvd_counts, tick_label = ['0', '1'])\n",
     "plt.title('Heart Disease Outcome Distribution')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "id": "ea782UxzgtsM"
    },
@@ -550,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "id": "qy76XUrCgKyW"
    },
@@ -562,7 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical data to numeric with `pd.get_dummies` (only on X, bc y is already 0s and 1s)\n",
+    "X_encoded = pd.get_dummies(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "id": "YrQWgB4EhMcW"
    },
@@ -575,17 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert categorical data to numeric with `pd.get_dummies` (only on X, bc y is already 0s and 1s)\n",
-    "X_encoded = pd.get_dummies(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "id": "X4FuF4MllrNS"
    },
@@ -600,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "id": "GQzO_VGdiSxP"
    },
@@ -630,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "id": "TClVwbub4stn"
    },
@@ -643,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "id": "MXcGjd3G14Zp"
    },
@@ -655,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -674,7 +622,7 @@
        "RandomForestClassifier(class_weight='balanced', random_state=1)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {
     "id": "yfJNHvqY9k__"
    },
@@ -698,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {
     "id": "Z5QOHWlf-JAN"
    },
@@ -715,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -753,13 +701,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>51753</td>\n",
-       "      <td>5069</td>\n",
+       "      <td>51721</td>\n",
+       "      <td>5101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>3962</td>\n",
-       "      <td>52770</td>\n",
+       "      <td>3891</td>\n",
+       "      <td>52841</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -767,8 +715,8 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0        51753         5069\n",
-       "Actual 1         3962        52770"
+       "Actual 0        51721         5101\n",
+       "Actual 1         3891        52841"
       ]
      },
      "metadata": {},
@@ -782,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -795,7 +743,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score : 0.9204695563344312\n"
+      "Accuracy Score : 0.9208130052662169\n"
      ]
     }
    ],
@@ -806,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -845,7 +793,7 @@
     "id": "A-0fyLE4ui--"
    },
    "source": [
-    "**Evaluation:** For this optimization, `SMOTE` was used to oversample the data, which resulted in an overall accuracy score of 92.05% when predicting both class `0` and `1`. Compared to the initial model that used `RandomOverSampler` for oversampling, the overall accuracy decreased."
+    "**Evaluation:** For this optimization, `SMOTE` was used to oversample the data, which resulted in an overall accuracy score of 92.08% when predicting both class `0` and `1`. Compared to the initial model that used `RandomOverSampler` for oversampling, the overall accuracy decreased."
    ]
   }
  ],
