--- a/Random_Forest_Model_Optimization2.ipynb
+++ b/Random_Forest_Model_Optimization2.ipynb
@@ -309,58 +309,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "XM3VsqShDZYZ",
-    "outputId": "4a179cbf-336c-4edd-ba28-8fd549c31833"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age_Group\n",
-       "0    26.005244\n",
-       "1    28.585826\n",
-       "2    29.697715\n",
-       "3    29.151087\n",
-       "4    27.672867\n",
-       "Name: BMI, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a series of average BMI for each age\n",
-    "avg_bmi_by_age = cvd_df.groupby('Age_Group')['BMI'].mean()\n",
-    "avg_bmi_by_age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "YbUXJ5SwRI_f"
-   },
-   "outputs": [],
-   "source": [
-    "# Replace NaN values in the \"bmi\" column with the average BMI of the corresponding age\n",
-    "def replace_bmi(row):\n",
-    "    if pd.isna(row['BMI']):\n",
-    "        return avg_bmi_by_age[row['Age_Group']]\n",
-    "    else:\n",
-    "        return row['BMI']\n",
-    "\n",
-    "cvd_df['BMI'] = cvd_df.apply(replace_bmi, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "colab": {
@@ -476,7 +424,7 @@
     }
    ],
    "source": [
-    "# Look at the stroke outcome value counts\n",
+    "# Look at the Heart Disease outcome value counts\n",
     "cvd_counts = cvd_df['Heart_Disease'].value_counts()\n",
     "cvd_counts"
    ]
@@ -508,7 +456,7 @@
     }
    ],
    "source": [
-    "# Examine the distribution of stroke column\n",
+    "# Examine the distribution of Heart Disease column\n",
     "plt.bar(x = cvd_counts.index, height = cvd_counts, tick_label = ['0', '1'])\n",
     "plt.title('Heart Disease Outcome Distribution')"
    ]
