--- a/Stuti_SVM_model.ipynb
+++ b/Stuti_SVM_model.ipynb
@@ -1042,7 +1042,7 @@
         }
       ],
       "source": [
-        "from sklearn.svm import SVC  # Corrected import statement\n",
+        "from sklearn.svm import SVC  \n",
         "\n",
         "# Create the SVM model with a rdf kernel\n",
         "model = SVC(kernel='rbf')\n",
@@ -1615,7 +1615,7 @@
         "sm = SMOTE(random_state=42)\n",
         "X_train_res, y_train_res = sm.fit_resample(X_train, y_train)\n",
         "\n",
-        "# Now, you can use the resampled data to train your model\n",
+        "# Now, we can use the resampled data to train your model\n",
         "model = SVC(kernel='rbf')\n",
         "model.fit(X_train_res, y_train_res)"
       ]
