--- a/Support Victor Machine Model/Stuti_SVM_model Optimization2.ipynb
+++ b/Support Victor Machine Model/Stuti_SVM_model Optimization2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "0469b5bf-036f-4f45-a229-610da83aec29",
       "metadata": {
         "id": "0469b5bf-036f-4f45-a229-610da83aec29"
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "KOxaWSP3mkA0",
       "metadata": {
         "id": "KOxaWSP3mkA0"
@@ -30,7 +30,7 @@
       "outputs": [],
       "source": [
         "# heart_cleaned.csv is in the resource folder\n",
-        "data_path = 'Resources/heart_cleaned.csv'\n",
+        "data_path = '../Resources/heart_cleaned.csv'\n",
         "\n",
         "# Load data using pandas\n",
         "df_heart = pd.read_csv(data_path)"
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "409559c7-9336-4262-a8b0-47f5ada00e7c",
       "metadata": {
         "colab": {
@@ -225,7 +225,7 @@
               "4                      0.0          4  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "c84a0b5b-919c-4da6-8be1-61723f173e9b",
       "metadata": {
         "colab": {
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "0e92ceda-760b-46b6-b167-0b9c60d43cd1",
       "metadata": {
         "colab": {
@@ -302,7 +302,7 @@
               "(308854, 17)"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "id": "56c9afe5",
       "metadata": {},
       "outputs": [
@@ -336,13 +336,13 @@
         "plt.xlabel('Heart Disease')\n",
         "plt.ylabel('Count')\n",
         "plt.xticks([0, 1], ['No', 'Yes'])\n",
-        "plt.savefig('Images/confusion_matrix.png')\n",
+        "plt.savefig('../Images/Heart_Disease_distribution_bar.png')\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "5afa805a",
       "metadata": {},
       "outputs": [
@@ -367,7 +367,7 @@
         "        shadow=True, startangle=90)\n",
         "ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
         "plt.title('Heart Disease Proportion')\n",
-        "plt.savefig('Images/confusion_matrix.png')\n",
+        "plt.savefig('../Images/heart_disease_distribution_pie.png')\n",
         "plt.show()"
       ]
     },
