SVM report added

--- a/Support Victor Machine Model/Stuti_SVM_model.ipynb
+++ b/Support Victor Machine Model/Stuti_SVM_model.ipynb
@@ -1153,6 +1153,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4fecd62",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceb98b5f",
+   "metadata": {},
+   "source": [
+    "Our model here gives the good accuracy of 92 % . The classification report above having a good precision of 0.92 and 1.00 displays that the model is highly effective at identifying class 0, which is column with NO heart disease or patients with negative results. However, it fails to recognize class 1, which is  patients with positive herat disease.  The precision, recall, and F1-score for class 1 are all 0.00, indicating the model did not correctly identify any instances of class 1. The report suggests that model's high performance at the majority is misleading in this context because of the significant class imbalance (70,955 for 0 > 6,259 for 1) suggesting a need to improve  the model , such as resampling by SMOTE.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "2c41ef4f",
@@ -1672,6 +1688,22 @@
     "print(\"Accuracy:\", accuracy)\n",
     "print(\"\\nConfusion Matrix:\\n\", conf_matrix)\n",
     "print(\"\\nClassification Report:\\n\", class_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac7742ae",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81360fb7",
+   "metadata": {},
+   "source": [
+    "After applying the SMOTE our overall accuracy went down to 78% . However the classification report and confusion matrix above displays that the precision score for class 0 is increased to 96% whereas the precision score for  class 1 increased to 20%, which is better compared to our original model, but not so good looking at low recall f1 score for class 1 and 0 both. Likewise, if we look at our confusion matrix we see that the model does predict the positive result in pretty good numbers, i.e, 56,205 which is true positive, however the high false positive is also pretty high, i.e, 14750. The number of 2568 which is false negative is also significant considering the error in heart disease diagnosis, which could be fatal for many patients."
    ]
   }
  ],
